pkg/lang/syntax/testdata/ub/invalid/duplicate-fields/stack/state-body.ub
stack: {
  state: local {
    path: './one.json'
    path: './two.json'
  }
  encryption: noop {}
}
